--- a/Labs.ipynb
+++ b/Labs.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
       "19 век\n",
       "20 век\n",
       "21 век\n",
-      "Введите дату: 12.11.2001\n",
+      "Введите дату: 12.12.2001\n",
       "21 век\n"
      ]
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -203,9 +203,10 @@
      "output_type": "stream",
      "text": [
       "Эталон Пи: 3.141592653589793\n",
-      "Start time: Fri Mar  9 16:28:53 2018\n",
+      "Start time: Sat Mar 10 02:25:08 2018\n",
       "EPS = 0.00001\n",
-      "Время выполнения функции: 0.092111 sec\n",
+      "End time: Sat Mar 10 02:25:08 2018\n",
+      "Время выполнения функции: 0.09355735778808594 сек\n",
       "10^-5 Число Пи: 3.14160\n"
      ]
     }
@@ -217,8 +218,10 @@
     "def timer(func):\n",
     "    def wrapper(arg):\n",
     "        t = time.time()\n",
+    "        print(\"Start time:\", time.ctime(t))\n",
     "        res = func(arg)\n",
-    "        print(\"Время выполнения функции: %f sec\" % (time.time() - t))\n",
+    "        print(\"End time:\", time.ctime(t))\n",
+    "        print(\"Время выполнения функции: {} сек\".format((time.time() - t)))\n",
     "        return res\n",
     "    return wrapper\n",
     "\n",
@@ -226,14 +229,10 @@
     "    #return (-1)**n/(2.*n + 1)\n",
     "    return (-1)**(n%2)/(2.*n + 1)\n",
     "\n",
-    "def toFixed(numObj, digits=0):\n",
-    "    return \"{numObj:.{digits}f}\".format(**vars())\n",
-    "\n",
     "@timer\n",
     "def calcPi(znak):\n",
     "    n, s, s1, s2 = 0, 0, 0, 0\n",
     "    t = time.time()\n",
-    "    print(\"Start time:\", time.ctime(t))\n",
     "    eps = 10**(-znak)\n",
     "    diff = 0\n",
     "    print(\"EPS = {eps:.{znak}f}\".format(**vars()))\n",
@@ -243,7 +242,7 @@
     "        s += s1\n",
     "        n += 1\n",
     "        diff = abs(s2 - s1)\n",
-    "        if time.time() - t > 30:\n",
+    "        if time.time() - t > 60:\n",
     "            t = time.time()\n",
     "            print(\"eps = {diff:.{znak}f}\".format(**vars()))\n",
     "        if diff <= eps:\n",
@@ -263,7 +262,7 @@
     "# Лабораторная работа №4\n",
     "\n",
     "С использованием цикла и модуля random сгенерировать массивы из n действительных чисел, необходимые для вычисления по формуле соответсвующей вашему варианту. Программу выполнить несколько раз для различных значений n. Исходные данные и результат вывести на экран.\n",
-    "$$c_{i}=a_{i}+b_{i}$$"
+    "$$c_{i}=a_{i}*b_{i}$$"
    ]
   },
   {
@@ -306,6 +305,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/bazik/Projects/Python-labs/lab_05\n",
+      "/home/bazik/Projects/Python-labs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd lab_05\n",
+    "%run lab_03.py\n",
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/bazik/Projects/Python-labs/lab_05\n",
+      "/home/bazik/Projects/Python-labs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd lab_05\n",
+    "%run lab_04.py\n",
+    "%cd .."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -323,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -348,6 +387,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:File `'./lab_06/lab_06.py'` not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd lab_06\n",
+    "%run lab_06.py\n",
+    "%cd .."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -358,14 +416,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[16, 21, 36, 50, 52, 62, 74, 89, 102, 108, 114, 120, 138, 150, 157, 159, 164, 167]\n"
+      "16, 21, 36, 50, 52, 62, 74, 89, 102, 108, 114, 120, 138, 150, 157, 159, 164, 167\n"
      ]
     }
    ],
@@ -376,7 +434,19 @@
     "for i in range(len(text)):\n",
     "    if text[i] == \" \":\n",
     "        sp_list.append(i)\n",
-    "print(sp_list)"
+    "\n",
+    "print(\", \".join(str(v) for v in sp_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd lab_07\n",
+    "%run lab_07.py\n",
+    "%cd .."
    ]
   },
   {
@@ -390,14 +460,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26988\n"
+      "86231\n"
      ]
     }
    ],
@@ -413,7 +483,18 @@
     "delta = end_day - now_time\n",
     "seconds = delta.seconds + 1\n",
     "\n",
-    "print(delta.seconds)"
+    "print(seconds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd lab_08\n",
+    "%run lab_08.py\n",
+    "%cd .."
    ]
   },
   {
@@ -429,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -450,6 +531,33 @@
     "print(res_right)\n",
     "print(res)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/bazik/Projects/Python-labs/lab_09\n",
+      "/home/bazik/Projects/Python-labs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd lab_09\n",
+    "%run lab_09.py\n",
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
