--- a/Labs.ipynb
+++ b/Labs.ipynb
@@ -388,14 +388,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR:root:File `'./lab_06/lab_06.py'` not found.\n"
+      "/home/bazik/Projects/Python-labs/lab_06\n",
+      "/home/bazik/Projects/Python-labs\n"
      ]
     }
    ],
